<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>den_rob_package</name>
  <version>0.0.0</version>
  <description>Dentista Robitics Software</description>
  <maintainer email="dominicdigiacomo16@gmail.com">Dominic Digiacomo</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python3-tf-transformations</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
